Convert num_pes to integer value
Improves the ordering of rows in the table and values on the horizontal axis of graph

--- a/notebooks/5-scaling-study.ipynb
+++ b/notebooks/5-scaling-study.ipynb
@@ -24,7 +24,7 @@
     "    gf = ht.GraphFrame.from_caliper_json(dataset)\n",
     "    gf.drop_index_levels()\n",
     "    \n",
-    "    num_pes = re.match('(.*)-(\\d+)(.*)', dataset).group(2)\n",
+    "    num_pes = int(re.match('(.*)-(\\d+)(.*)', dataset).group(2))\n",
     "    gf.dataframe['pes'] = num_pes\n",
     "    filtered_gf = gf.filter(lambda x: x['time'] > 1e6)\n",
     "    \n",
